fixed email message alignment

--- a/client/src/css/Contact.css
+++ b/client/src/css/Contact.css
@@ -94,3 +94,8 @@ input[type="submit"]:hover {
   margin: 0;
   font-size: 2rem;
 }
+
+.confirmationMessage {
+  width: 100vw;
+  text-align: center;
+}
